--- a/Enviroment/http-folder/styles.css
+++ b/Enviroment/http-folder/styles.css
@@ -1,5 +1,3 @@
-/* styles.css */
-
 /* Estilos generales */
 body {
     font-family: Arial, sans-serif;
@@ -10,7 +8,7 @@ body {
 
 /* Encabezado */
 header {
-    background-color: #007BFF;
+    background-color: #333; /* Fondo del encabezado en negro */
     color: #fff;
     padding: 20px 0;
     text-align: center;
@@ -18,13 +16,21 @@ header {
 
 h1 {
     font-size: 36px;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
+}
+.section ul {
+    list-style-type: disc;
+    margin-left: 20px;
+    padding-left: 0; /* Elimina el espacio izquierdo predeterminado de la lista */
 }
 
+.section ul li {
+    margin-bottom: 10px; /* Espaciado entre elementos de la lista */
+}
 /* Secciones */
 .section {
     background-color: #fff;
-    padding: 20px;
+    padding: 30px;
     margin: 20px 0;
     border: 1px solid #ddd;
     border-radius: 5px;
@@ -32,13 +38,14 @@ h1 {
 
 .section h2 {
     font-size: 24px;
-    color: #007BFF;
-    margin-bottom: 10px;
+    color: #000; /* Cambio de color a negro */
+    margin-bottom: 20px;
 }
 
 .section p {
     font-size: 18px;
-    line-height: 1.6;
+    line-height: 1.4; /* Reducción del espaciado entre líneas */
+    margin-bottom: 10px; /* Reducción del espaciado entre párrafos */
 }
 
 /* Tarjetas */
@@ -47,33 +54,36 @@ h1 {
     border: 1px solid #ddd;
     border-radius: 5px;
     padding: 20px;
-    margin: 10px 0;
+    margin: 20px 0;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .card h3 {
     font-size: 20px;
     margin: 0;
+    color: #333; /* Cambio de color a negro */
 }
 
 .card a {
-    color: #007BFF;
+    color: #000; /* Cambio de color a negro */
     text-decoration: none;
 }
 
 .card a:hover {
     text-decoration: underline;
 }
+
 /* Pie de página */
 footer {
-    background-color: #007BFF;
+    background-color: #333; /* Fondo del pie de página en negro */
     color: #fff;
     padding: 10px 0;
     text-align: center;
-    position: fixed; /* Establece la posición como fija */
-    bottom: 0; /* Ancla el footer en la parte inferior */
-    width: 100%; /* Asegura que ocupe todo el ancho */
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
+
 /* Estilo para las imágenes en las tarjetas */
 .card img {
     max-width: 100%;
