--- a/Enviroment/http-folder/styles.css
+++ b/Enviroment/http-folder/styles.css
@@ -4,6 +4,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f7f7f7;
+    font-family: 'Open Sans', sans-serif;
 }
 
 /* Encabezado */
